# bountyhunter

./: README.md  contracts.docx
backend/: .gitignore  README.md  package-lock.json  package.json
backend/src/: index.js
backend/src/bounty/: index.js
backend/src/db/: index.js
backend/src/log/: index.js
backend/src/models/: bounty.js  log.js  user.js  work.js
backend/src/routes/: app.routes.js  bounty.js
backend/src/user/: index.js
backend/src/work/: index.js
contracts/: .gitignore  Cargo.toml  README.md
contracts/scripts/: bind.sh  deploy.sh  test.sh
contracts/src/: bounty.rs  fee.rs  lib.rs  storage_types.rs  test.rs  work.rs
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.js
frontend/bountyhunter_module/: README.md  package-lock.json  package.json
frontend/bountyhunter_module/src/: index.ts  method-options.ts
frontend/public/: manifest.json
frontend/src/: App.jsx  App.scss  index.css  index.jsx  style.scss  utils.js
frontend/src/components/: Avatar.jsx  AvatarCrop.jsx  Information.jsx  ListingDescription.jsx  Participant.jsx  WarningMsg.jsx
frontend/src/components/home/: Banner.jsx  ColorGroup.jsx
frontend/src/components/menu/: BackButton.jsx  ConnectWallet.jsx  HelpButton.jsx  MainHeader.jsx  ScrollToTop.jsx  SearchBox.jsx  SideBar.jsx  SubHeader.jsx
frontend/src/contexts/ContractContext/: index.jsx
frontend/src/contexts/WalletContext/: index.jsx
frontend/src/hooks/useBackend/: index.jsx
frontend/src/pages/explore_bounties/: ExBounty.jsx  ExBountyListing.jsx  index.jsx
(+15 files in other folders)
