[package]
name = "soroban_escrow_smart_contract"
version = "1.0.0"
edition = "2021"
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.0.0-rc1" }

[dev_dependencies]
soroban-sdk = { version = "20.0.0-rc1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

